--- a/index.html
+++ b/index.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><HM-01></title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <header>
+      <a href=""></a>
+      <p>WebStudio</p>
+      <nav>
+        <ul>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <p>info@destudio.com</p>
+      <p>+11(000) 111-11-11</p>
+    </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2 hidden>!</h2>
+        <dl>
+          <dt>Strategy</dt>
+          <dd>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </dd>
+          <dt>Punctuality</dt>
+          <dd>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </dd>
+          <dt>Diligence</dt>
+          <dd>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </dd>
+          <dt>Technologies</dt>
+          <dd>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </dd>
+        </dl>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="images/whatwearedoing/img1.jpg"
+              alt="Computer"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="images/whatwearedoing/img2.jpg"
+              alt="App"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/whatwearedoing/img3.jpg"
+              alt="Phone with enable app"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Out Team</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/ourteam/img.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <p>Mark Guerrero</p>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/images/ourteam/img1.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <p>Tom Ford</p>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/ourteam/img2.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <p>Camila Garcia</p>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/ourteam/img3.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <p>Daniel Wilson</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href=""></a>
+      <p>WebStudio</p>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
